# Traffic-Violation-Reporting-Automation-TVRA

./: .gitignore  DEVELOPMENT_LOG.md  DEVELOPMENT_LOG_en.md  README.md  README_en.md  Requriement.md  a.txt  auto.py  clean_data.py  convert.py  data_collect.py  extract_frames.py  file_rename.py  huggleface.py  protocl.py  test.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md  question.md
.github/workflows/: pr-lint.yml  python-ci.yml  stale.yml
FileCompareTool/: README.md  README_zh-TW.md
TaiwanLicensePlate/: README.md  README_en.md
TaiwanLicensePlate/OCR/: extract_plate_OpenCV.py
Tools/: extract_invalid_polygon_images.py
Tools/files/: __init__.py  build_file_compare_exe.bat  check_label.py  convert.py  extract_frames.py  file_compare_app.py  file_compare_cli.py  file_compare_core.py  file_compare_tool.spec  push.py
Tools/files/cpp/: CMakeLists.txt  file_hash_accelerator.cpp
Tools/sampling/: CODE_REVIEW_AND_FIX_PLAN.md  SAMPLING_CODE_REVIEW.md  autoLabel.md  auto_label.py  constants.py  embedding.py  extract_negative.py  gui.py  (+9 more)
YoloTool/: README.md  README_zh-TW.md
dataset/: data.yaml  dataset.yaml
negative_clean/: PIPELINE_DETAILS_en.md  PIPELINE_DETAILS_zh.md  auto_label_classifier.py  pipeline.py
nmea_track_visualizer/: README.md  visualize_nmea_tracks.py
sampling/: embedding.py  extract_negative.py  main.py  requre.md  sampling.py  utils.py  val_clean.py
taiwan_plate/: args.yaml  results.csv
untitled/: CMakeLists.txt  main.cpp
(+11171 files in other folders)
